python-web-server/tests/http/requests/invalid/invalid_field_value_01.py
from web_server.config import MessageConfig
from web_server.errors import InvalidHeaderName

cfg = MessageConfig.default()
request = InvalidHeaderName
